--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "1.7.9",
-    "next": "15.1.1",
+    "next": "^15.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-redux": "^9.2.0",
